0.6.6/_sources/gallery/viewer_fps_label.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/viewer_fps_label.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_viewer_fps_label.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_viewer_fps_label.py:


Viewer FPS label
================

Display a 3D volume and the fps label.

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 9-31



.. image-sg:: /gallery/images/sphx_glr_viewer_fps_label_001.png
   :alt: viewer fps label
   :srcset: /gallery/images/sphx_glr_viewer_fps_label_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np

    import napari


    def update_fps(fps):
        """Update fps."""
        viewer.text_overlay.text = f'{fps:1.1f} FPS'


    viewer = napari.Viewer()
    viewer.add_image(np.random.random((5, 5, 5)), colormap='red', opacity=0.8)
    viewer.text_overlay.visible = True
    # note: this is using a private attribute, so it might break
    # without warning in future versions!
    viewer.window._qt_viewer.canvas._scene_canvas.measure_fps(callback=update_fps)

    # call update_fps function once to have it show before
    # mouse interaction with the canvas
    update_fps(60)
    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_viewer_fps_label.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: viewer_fps_label.ipynb <viewer_fps_label.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: viewer_fps_label.py <viewer_fps_label.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: viewer_fps_label.zip <viewer_fps_label.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
